# graphical

./: .gitignore  .pylintrc  README.md  __init__.py  axgrid.py  draggables.py  dualaxes.py  errorbars.py  formatters.py  hist.py  imagine.py  interactive.py  jvis.py  lc.py  legend.py  lines.py  machinery.py  misc.py  multitab.py  multitab2d.py  pyproject.toml  rainbow.py  requirements.txt  setup.cfg  setup.py  sliders.py  sliders_test.py  spectra.py  splot.py  tests.py  ticks.py  transforms.py  ts.py
graphical/: dualaxes.py  formatters.py  imagine.py  interactive.py  spectra.py  ticks.py  ts.py
graphing/: connect.py  corner.py  dualaxes.py  hist.py  imagine.py  interactive.py  jvis.py  multitab.py  scatter.py  sliders.py  ticks.py  ts.py  utils.py  zscale.py
graphing/draggable/: __init__.py  core.py  errorbars.py  legend.py  lines.py  machinery.py
scrawl/: __init__.py  formatters.py  scatter.py  ticks.py
src/scrawl/: __init__.py  bar3d.py  bezier.py  config.yaml  conftest.py  connect.py  corner.py  density.py  dualaxes.py  hist.py  imagine.py  jvis.py  mcmc.py  rainbow.py  requirements.txt  scatter.py  sliders.py  spectra.py  test_jvis.py  ticks.py  transforms.py  utils.py
src/scrawl/depth/: bar3d.py  camera.py  prisms.py  prisms3d.py  utils.py  zaxis_cbar.py
src/scrawl/image/: __init__.py  cbar.py  display.py  grid.py  hist.py  image.py  (+4 more)
tests/: test_bar3d.py  test_density.py  test_display.py  test_draggable.py  test_im3.py  test_imaging.py  test_prisms.py  test_prisms3d.py  test_scatter.py  test_sliders.py  test_ts.py  test_utils.py  test_vid.py  ts.py
(+13 files in other folders)
