[metadata]
name = scrawl
author = Hannes Breytenbach
author_email = hannes@saao.ac.za
description = Various plotting routines 📊✨🎨
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/astromancer/scrawl
project_urls =
    Bug Tracker = https://github.com/astromancer/scrawl/issues
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
setup_requires =
  setuptools_scm
  six


[options.packages.find]
where = src